# fastapi-enterprise-boilerplate

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/ai/: llm.py
app/ai/chains/: example_chain.py
app/ai/graphs/: example_graph.py
app/ai/tools/: example_tool.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/health/: routes.py
app/api/v1/items/: repository.py  routes.py  schemas.py  service.py
app/common/: responses.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: pool.py  repository.py  resilience.py
app/messaging/: base.py
app/messaging/kafka/: consumer.py  producer.py
app/messaging/rabbitmq/: consumer.py  producer.py
app/observability/: metrics.py  middleware.py
app/workers/: event_handlers.py
infra/filebeat/: filebeat.yml
infra/logstash/: logstash.conf
infra/prometheus/: prometheus.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
migrations/: env.py
migrations/versions/: 001_create_items_table.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_exceptions.py  test_messaging.py  test_schemas.py
